Fix horizontal scroll Chrome

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -7,6 +7,7 @@
 
 html{
 	height: 100%;
+	position: relative;
 	--color-green: #A0D233;
 	--color-yellow: #FFFCBC;
 	--color-brown: #8B4513;
@@ -16,9 +17,9 @@ html{
 }
 
 body{
-	display: table;
-	width: 100%;
 	height: 100%;
+	display: flex;
+	flex-flow: column;
 	font-family: "MV Boli", "cursive";
 	font-size: 14px;
 	background-image:radial-gradient(white, #A0D233);
@@ -189,6 +190,7 @@ article > .container-fluid{
 */
 
 footer{
+	margin-top: auto;
 	color: #8B4513;
 	color: var(--color-brown);
 	box-shadow: 0 0 3px #444;
@@ -239,13 +241,6 @@ footer h4{
 */
 
 /* FOOTER FIXED BOTTOM */
-.page-row{
-	display: table-row;
-	height: 1px;
-}
-.page-row-expanded{
-	height: 100%;
-}
 button.infobulle{
 	border: none;
 	background: none;
